# curriculummapper

./: .gitignore  .~lock.data_science_masters_programs.csv#  CSDS.html  Case Western MS in Data Science Curriculum output.txt  Case_Western_MS_in_Data_Science_Curriculum_CSDS.html  LICENSE.txt  Output Example.ipynb  README.md  San Francisco State University MA in Mathematics Curriculum output.txt  San_Francisco_State_University_MA_in_Mathematics_Curriculum_MATH.html  course.py  course_inventory_scrapper.py  curriculum.py  cwru_example.py  data_science_masters_programs.csv  dev.sh  prereq-miner.py  requirements.txt  setup.cfg  setup.py  sfsu_example.py  test_course.py  test_curriculum.py
.circleci/: config.yml
curriculummapper/: __init__.py  course.py  curriculummapper.py  example.sh  sfsu_example.py
curriculummapper/data/: Case_Western_MS_in_Data_Science_Curriculum_output.txt  San_Francisco_State_University_MA_in_Mathematics_Curriculum_output.txt
example/: uci_example.py
examples/: Example.sh  bulletincrawler.py  cwru.py  cwru_example.py  example.sh  sfsu_full.py  uci_example.py
examples/data/: Case_Western_MS_in_Data_Science_Curriculum_output.txt  Case_Western_MS_in_Data_Science_Curriculum_stat.html  San_Francisco_State_University_MA_in_Mathematics_Curriculum_math.html  San_Francisco_State_University_MA_in_Mathematics_Curriculum_output.txt
examples/visualization/: San_Francisco_State_University_MA_in_Mathematics_Curriculum_MATH.html
src/: .gitignore  Example.sh  curriculummapper.py  cwru_example.py  sfsu.py
src/curriculum/: Curriculum Mapper.ipynb  curriculum.py  cwru.py  sfsu_example.py
tests/: test_course.py  test_curriculum.py
(+27 files in other folders)
