[metadata]
name = curriculummapper
version = 0.0.1
author = Timmy Chan
author_email = mathtodata@gmail.com
description = Visualization tool for university curricula
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TimmyChan/curriculum_mapper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt