[metadata]
name = curriculummapper
version = 0.0.1
author = Timmy Chan
author_email = mathtodata@gmail.com
description = visualization tool for university curricula
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TimmyChan/curriculummapper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = curriculummapper
packages = find:
python_requires = >=3.9

[options.packages.find]
where = curriculummapper

# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt